--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,22 @@ coreKtxVersion = "1.10.0"
 googleApiClient = "1.32.1"
 googleApiClientAndroid = "2.6.0"
 googleApiClientAndroidVersion = "1.23.0"
+googleApiClientVersion = "1.31.5"
 googleApiServicesSheets = "v4-rev614-1.25.0"
+googleApiServicesSheetsVersion = "v4-rev614-1.25.0"
 googleApiServicesTasks = "v1-rev48-1.23.0"
 googleApisSheets = "v4-rev20230822-2.0.0"
 googleAuthLibraryOauth2Http = "1.24.1"
+googleAuthLibraryOauth2HttpVersion = "1.7.0"
+googleGoogleOauthClientJetty = "1.31.5"
 googleHttpClientGson = "1.23.0"
+googleHttpClientJackson2 = "1.41.5"
 googleOauthClientJetty = "1.36.0"
 googleOauthClientJettyVersion = "1.32.1"
 gradle = "8.5.2"
 gson = "2.10.1"
+jacksonDatabind = "2.13.0"
+jacksonModuleKotlin = "2.13.0"
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
 junit = "4.13.2"
@@ -28,25 +35,35 @@ identityJvm = "202408.1"
 playServicesIdentity = "7.3.0"
 roomCompiler = "2.6.1"
 appcompat = "1.7.0"
+securityCrypto = "1.1.0-alpha06"
+securityCryptoKtx = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version = "1.13.1" }
 androidx-core-ktx-v1100 = { module = "androidx.core:core-ktx", version = "1.13.1" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
 google-api-client = { module = "com.google.api-client:google-api-client", version.ref = "googleApiClientAndroid" }
 google-api-client-android = { module = "com.google.api-client:google-api-client-android", version.ref = "googleApiClientAndroid" }
 google-api-client-android-v1230 = { module = "com.google.api-client:google-api-client-android", version.ref = "googleApiClientAndroidVersion" }
+google-api-client-v1315 = { module = "com.google.api-client:google-api-client", version.ref = "googleApiClientVersion" }
 google-api-client-v1321 = { module = "com.google.api-client:google-api-client", version.ref = "googleApiClient" }
 google-api-services-sheet = { module = "com.google.apis:google-api-services-sheet" }
 google-api-services-sheets = { module = "com.google.apis:google-api-services-sheets", version = "v4-rev20240730-2.0.0" }
+google-api-services-sheets-vv4rev6141250 = { module = "com.google.apis:google-api-services-sheets", version.ref = "googleApiServicesSheetsVersion" }
 google-api-services-tasks = { module = "com.google.apis:google-api-services-tasks", version.ref = "googleApiServicesTasks" }
 google-apis-sheets = { module = "com.google.apis:google-apis-sheets", version.ref = "googleApisSheets" }
 google-auth-library-oauth2-http = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2Http" }
+google-auth-library-oauth2-http-v170 = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2HttpVersion" }
 google-http-client-gson = { module = "com.google.http-client:google-http-client-gson", version.ref = "googleHttpClientGson" }
+google-http-client-jackson2 = { module = "com.google.http-client:google-http-client-jackson2", version.ref = "googleHttpClientJackson2" }
 google-oauth-client-jetty = { module = "com.google.oauth-client:google-oauth-client-jetty", version.ref = "googleOauthClientJetty" }
+google-oauth-client-jetty-v1315 = { module = "com.google.oauth-client:google-oauth-client-jetty", version.ref = "googleGoogleOauthClientJetty" }
 google-oauth-client-jetty-v1321 = { module = "com.google.oauth-client:google-oauth-client-jetty", version.ref = "googleOauthClientJettyVersion" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jacksonDatabind" }
+jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jacksonModuleKotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -66,6 +83,7 @@ identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompiler" }
 play-services-identity = { module = "com.google.android.gms:play-services-identity", version.ref = "playServicesIdentity" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-security-crypto-ktx = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "securityCryptoKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
